Added connectivity with the MongoDB cluster in .env

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,5 @@
+NODE_ENV=development
+DATABASE=mongodb+srv://vedanta28:<PASSWORD>@cluster0.yvz3yio.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE_PASSWORD=WqDS5cH5mil75YIz
 PORT=5000
