--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
-DATABASE=mongodb+srv://vedanta28:<PASSWORD>@cluster0.yvz3yio.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE=mongodb+srv://vedanta28:<PASSWORD>@cluster0.yvz3yio.mongodb.net/msb-academy?retryWrites=true&w=majority
 DATABASE_PASSWORD=WqDS5cH5mil75YIz
 PORT=42690
