--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
