--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
