--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,17 @@
   "author": "Koustav Sen",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
