unique emailId, auth working tested

--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 DATABASE=mongodb+srv://vedanta28:<PASSWORD>@cluster0.yvz3yio.mongodb.net/msb-academy?retryWrites=true&w=majority
 DATABASE_PASSWORD=WqDS5cH5mil75YIz
+JWT_SECRET=vedanta28
+JWT_EXPIRES_IN=90d
 PORT=42690
