--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "sharp": "^0.32.0",
     "xss-clean": "^0.1.1"
   },
