Integrated Payment Routes

--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,5 @@ DATABASE_PASSWORD=WqDS5cH5mil75YIz
 JWT_SECRET=tThis_is_my_JWT_Secret_Key_Do_Not_Change_This_Key_123456789
 JWT_EXPIRES_IN=90d
 PORT=42690
+RAZORPAY_KEY=rzp_test_MrTc2mD19J95OQ
+RAZORPAY_SECRET=wXEjhfQuT4Ep8HbghLixbz0f
