--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1",
+    "razorpay": "^2.8.6",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
