--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-remove-scroll-bar": "^2.3.4",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
